<resources>
    <string name="app_name">PruebaIMASDJosueRangel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="empresa">IMASD</string>
    <string name="proyecto">Prueba Josue Rangel</string>
    <string name="listarPersonal">Listar Personal</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_nuevo_empleado">Empleado</string>
    <string name="area">Area: </string>
    <string name="nombre">Nombre: </string>
    <string name="apellido_paterno">Apellido Paterno: </string>
    <string name="apellido_materno">Apellido Materno: </string>
    <string name="telefono">Telefono: </string>
    <string name="fecha_nacimiento">Fecha de Nacimiento: </string>
    <string name="edad">Edad: </string>
    <string name="email">Email: </string>
    <string name="guardar">Guardar</string>
    <string name="sincronizar">Sincronizar</string>

    <string-array name="areas">
        <item>Software</item>
        <item>Consultoria</item>
    </string-array>
    <string name="title_activity_detalle_empleado">Consultar empleado</string>


</resources>
