<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetalleEmpleadoActivity"
    tools:showIn="@layout/activity_detalle_empleado">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLNuevoEmpleado"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:layout_marginBottom="5dp"
            />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido_paterno"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvApellidoPaterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido_paterno"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido_materno"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvApellidoMaterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido_materno"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginBottom="5dp"
            />

        <!--<Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:onClick="guardaElemento"/>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>